# spec

./: .gitignore  .gitlab-ci.yml  .gitmodules  .ohwr.yaml  .readthedocs.yaml  CHANGELOG  CHANGELOG.rst  Makefile  Manifest.py  README.rst  common.mk
.reuse/: dep5
LICENSES/: CERN-OHL-W-2.0+.txt  GPL-2.0.txt
distribution/: .gitignore  Makefile  dkms.conf  spec-fmc-carrier.spec
doc/: .gitignore  Makefile  Makefile.dependencies  conf.py  hdl-spec-base.rst  index.rst  requirements.txt  sw-driver.rst  sw-python.rst
hdl/golden/: Manifest.py
hdl/golden/platform/: Manifest.py
hdl/golden/syn/: Makefile  Manifest.py  (+1 more)
hdl/rtl/: .gitignore  Manifest.py  spec_base_regs.cheby  spec_base_regs.vhd  spec_base_wr.vhd  spec_template.vhd  spec_template_regs.cheby  spec_template_regs.vhd  spec_template_wr.vhd
hdl/template/: Manifest.py  spec_template.vhd  spec_template_regs.cheby  spec_template_regs.vhd
hdl/template_wr/: Manifest.py  spec_template_wr.vhd
hdl/test_ddr/: spec_ddr_test.ucf
kernel/: Kbuild  Makefile  gn412x-gpio.c  loader-ll.c  loader-ll.h  spec-compat.c  spec-compat.h  spec-core.c  spec-dbg.c  spec-fmc.c  spec-fpga.c  spec-gpio.c  spec-irq.c  spec.h
pytest/: conftest.py  pytest.ini  test_dma.py
software/: Makefile
software/PySPEC/: .gitignore  Makefile  pyproject.toml  setup.cfg  setup.py
software/PySPEC/PySPEC/: PySPEC.py  __init__.py
software/include/: .gitignore  Makefile
software/kernel/: .clang-format  .gitignore  Kbuild  Makefile  gn412x-fcl.c  gn412x-gpio.c  gn412x.h  spec-compat.c  spec-compat.h  spec-core-fpga.c  spec-core.c  spec-dbg.c  spec-fmc.c  spec-fpga.c  spec-gn412x-dma.c  spec-gpio.c  spec.h  spi-gcore.c  spi-ocores.c
software/tools/: .gitignore  Makefile  spec-firmware-version.c  spec_dma_throughput.py
(+75 files in other folders)
