# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: 2022 CERN

[metadata]
name = PySPEC
description = Python Module to handle SPEC cards
license= LGPL-3.0-or-later
platform = any
url="https://www.ohwr.org/project/spec"

author="Federico Vaga"
author_email="federico.vaga@cern.ch"
maintainer="CERN BE-CEM-EDL"
maintainer_email="edl-drivers-support@cern.ch"

[options]
packages = find:
